# dotlink

./: Cargo.toml  README.md
root/: Link.toml
src/: main.rs
