[package]
name = "dotlink"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
colored = "3.0.0"
path-clean = "1.0.1"
serde = { version = "1.0.219", features = ["derive"] }
toml = { version = "0.9.2", default-features = false, features = ["serde", "parse", "display"] }
